<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="left"
    android:orientation="vertical"
    tools:context=".presentation.view.EscolherUsuario">

    <!-- Campo para falar do cadastro -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Olá!"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/para_melhor_atendimento"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/qual_o_seu"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/objetivo"
            android:textColor="@color/vermelho"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/interrogacao"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/transparent" />

    <RadioGroup
        android:id="@+id/opcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="23dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbAnunciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:buttonTint="@color/vermelho"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center|center_vertical"
            android:padding="20dp"
            android:text="Anunciar locais"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbAlugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:buttonTint="@color/vermelho"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center|center_vertical"
            android:padding="20dp"
            android:text="Alugar locais"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_acao"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/bt_cadastro"
        android:fontFamily="@font/poppins_regular"
        android:padding="10dp"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="Próxima etapa"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blue_bloob_decoration" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/red_bloob_decoration" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
